@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.7.5
 
+  *) Unix: Implement apr_shm_perms_set() for the "POSIX shm_open()"
+     and "classic mmap" shared memory implementations.  [Joe Orton,
+     Ruediger Pluem]
+
   *) Fix missing ';' for XML/HTML hex entities from apr_escape_entity().
      [Yann Ylavic]
 
